--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </aside>
     </main>
     <footer>
-      &copy; http://www.example.com
+      &copy; http://www.SPACE.com
     </footer>
   </div>
 </body>
