--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </aside>
     </main>
     <footer>
-      &copy; http://www.example.com
+      &copy; http://www.web sample.com
     </footer>
   </div>
 </body>
